--- a/mine.css
+++ b/mine.css
@@ -1,5 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Poppins:wght@300&family=Roboto+Flex:opsz,wght@8..144,800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
+/* @font-face {
+    font-family: 'Montserrat';
+    src: url('./asset/fonts/static/Montserrat-ExtraBold.ttf'), format('ttf');
+    font-weight: 500;
+} */
 
 * {
     margin: 0;
@@ -7,22 +11,25 @@
     outline: none;
     border: none;
     box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 
-:root{
-    --voilet: #0B0033;
-    --mauve: #e7c324;
-    --yelow-white: #F5F5F5;
-    --ebony: #CCCCCC;
-    --black: #000; 
-    --roboto: 'Roboto Flex', sans-serif;
-    --poppins: 'Poppins', sans-serif;
-    --monserrate: 'Montserrat Alternates', sans-serif;
+html{
+    font-size: 62.5%;
+}
+:root{   
+    --voilet: #FDFFF7;
+    --mauve: #8CA0D7;
+    --yelow-white: #292c35;
+    --ebony: #474545;
+    --text: white;
+    --regular-head: #e7c324;
     --container-width: 85vw;
     --container-mid : 90vw;
     --container-width-sm: 94vw;
     --page-hieght: 100dvh;
 }
+
 /* 
 292C35-rasian black
 FDFFF7-baby powder
@@ -36,16 +43,13 @@ Ivory (#FFFFF0):
 Light Lavender (#E6E6FA):
 #F5F5F5 - Light Gray
 */
-.light {
-    --voilet: #FDFFF7;
-    --mauve: #8CA0D7;
-    --yelow-white: #292c35;
-    --ebony: #2e2e2e;
-    --black: #000;
-}
-html{
-    font-size: 62.5%;
-
+.light{
+    --voilet: #866e01;
+    --mauve: #e7c324;
+    --ebony: #CCCCCC;
+    --text: #000; 
+    --regular-head: #8CA0D7;
+    --yelow-white: #F5F5F5;
 }
 body{
 user-select: none;
@@ -74,13 +78,13 @@ nav{
     display: flex;
     height: 6rem;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     color: var(--voilet);
     padding: 0rem 1rem;
 }
 .nav__container h2{
     font-size: 2.5rem;
-    font-family: var(--roboto);
+    font-weight: bold;
 }
 .nav__menu{
     display: flex;
@@ -97,8 +101,7 @@ nav{
 .nav__menu a{
     text-decoration: none;
     font-size: 1.5rem;
-    font-family: var(--poppins);
-    font-weight: 600;
+    font-weight: regular;
     position: relative;
     color: currentColor;
 }
@@ -110,13 +113,15 @@ nav{
     left: 0;
     width: 100%;
     height: 0.15rem;
-    background-color: var(--ebony);
+    /* background-color: var(--ebony); */
     border-radius: 2.5rem;
 }
 
-.nav__menu button{
-    font-size: 2rem;
-    background: none;
+.bg__change{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
 }
 .checkbox{
     opacity: 0;
@@ -172,13 +177,15 @@ nav{
     width: 50%;
     height: 95%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: baseline;
+    /* background: #000; */
 }
 .landing__image img{
     display: flex;
-    width: 99rem;
-    height: 96%;
+    height: 95%;
+    margin-right: -2.5rem;
 }
 #landing__page .landing__text{
     width: 50%;
@@ -186,45 +193,125 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
 }
 .text{
     height: 55%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: flex-end;
 }
 .text p{
-    font-family: var(--monserrate);
-    font-size: 1.7rem;
-    color: var(--voilet);
+    font-size: 1.6rem;
+    color: var(--text);
     text-align: justify;
-    line-height: 1.5;
-    letter-spacing: 0.5;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
     margin: 1rem auto;
+    font-weight: 500;
 }
 
 .text h3{
-    text-align: center;
-    font-family: var(--roboto);
-    font-size: 3.5rem;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
     color: var(--voilet);
-    border-bottom: 0.18rem solid var(--ebony);
+    line-height: 1;
+}
+.text h3 span:nth-child(1){
+    font-weight: 300;
+    letter-spacing: 0.5px;
+    font-size: 3.5rem;
+}
+.text h3 span:nth-child(2){
+    text-transform: capitalize;
+    font-weight: 800;
+    letter-spacing: 0px;
+    font-size: 7rem;
+}
+#btn{
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 2rem;
+    padding: 0.75rem 1.5rem;
+    letter-spacing: 0.1rem;
+    background: #444;
+    color: var(--voilet);
+    transition: .5s;
+    border-radius: 0.5rem;
+    font-weight: 500;
+}
+#btn:hover{
+    letter-spacing: 0.25rem;
+    background: #0059ff;
+    color: #0059ff;
+    box-shadow: 0 0 34px var(--mauve);
+}
+#btn::before{
+    content: '';
+    position: absolute;
+    inset: 3px;
+    background: var(--yelow-white);
 }
 
+#btn span{
+    position: relative;
+    z-index: 1;
+}
+#btn i{
+    position: absolute;
+    inset: 0;
+    display: block;
+}
+#btn i::before{
+    content: '';
+    position: absolute;
+    border: 0.15rem solid var(--voilet);
+    top: -3.5px;
+    left: 80%;
+    width: 1.5rem;
+    height: 1rem;
+    transform: translateX(-50%);
+    background: var(--yelow-white);
+    transition: .5s;
+}
+#btn:hover i::before{
+    width: 2rem;
+    left: 20%;
+}
+#btn i::after{
+    content: '';
+    position: absolute;
+    border: 0.15rem solid var(--voilet);
+    bottom: -3.5px;
+    left: 20%;
+    width: 1.5rem;
+    height: 1rem;
+    transform: translateX(-50%);
+    background: var(--yelow-white);
+    transition: .5s;
+}
+#btn:hover i::after{
+    width: 2rem;
+    left: 80%;
+}
+
+
 .landing__text .socials {
-    width: 80%;
+    width: 70%;
     height: 20%;
     display: flex;
     justify-content: space-between;
-    justify-self: flex-start;
+    align-items: baseline;
+    /* background: #0059ff; */
 }
 .hex__wrapper{
+    /* background: #000; */
     display: flex;
-    margin: auto;
-    width: 9.5rem;
-    height: 7.5rem;
+    width: 7rem;
+    height: 7rem;
 }
 .hex{
     position: relative;
@@ -232,11 +319,12 @@ nav{
     display: flex;
     align-content: center;
     justify-content: center;
-    background: linear-gradient(-180deg, var(--ebony), var(--voilet));
-    width: 46%;
-    height: 100%;
+    background: linear-gradient(-180deg, var(--mauve), var(--voilet));
+    width: 34px;
+    height: 56px;
     transition: .5s;
     cursor: pointer;
+    border-radius: 4px;
 }
 .hex a{
     display: flex;
@@ -263,7 +351,7 @@ nav{
     height: 100%;
     width: 100%;
     background: inherit;
-    border-radius: 0;
+    border-radius: 4px;
     transform-origin: center;
     transition: .7s;
 }
@@ -291,22 +379,27 @@ nav{
 /* About section */
 #about__page{
     width: 100%;
-    border-bottom: 0.08rem dashed var(--ebony);
     margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 #about__page h2{
-    font-family: var(--roboto);
     font-size: 3rem;
     color: var(--voilet);
     text-align: center;
-    border-bottom: 0.3rem dashed var(--ebony);
+    font-weight: 700;
+    text-transform: uppercase;
+    border-bottom: 0.08rem dashed var(--ebony);
 }
 .abt{
     width: 100%;
-    height: calc(100dvh / 3);
+    /* height: calc(100dvh / 3); */
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    /* background: red; */
 }
 .second__abt, .fourth__abt{
     display: flex;
@@ -314,37 +407,43 @@ nav{
 }
 
 .abt__content{
-    width: 50%;
+    width: 40%;
     display: flex;
     align-self: center;
     flex-direction: column;
 }
 .abt h3{
-    font-size: 3rem;
-    font-family: var(--roboto);
-    color: var(--mauve);
-    text-align: center;
+    font-size: 3.5rem;
+    color: var(--regular-head);
+    text-align: left;
+    font-weight: 700;
 }
 .abt p{
     font-size: 1.5rem;
-    color: var(--black);
+    color: var(--text);
     font-family: var(--monserrate);
     text-align: justify;
 }
-
+.second__abt p, .second__abt h3, .fourth__abt p, .fourth__abt h3{
+    text-align: right;
+}
 .abt__vector{
     width: 50%;
+    display: flex;
+    justify-content: center;
     /* background-color: white; */
 }
+
+
 
 /* Projects showcase */
 #projects__page{
     width: 100%;
-    height: var(--page-hieght);
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-bottom: 0.1rem dashed var(--ebony);
+    margin-top: 6rem;
 }
 
 .projects__page__head{
@@ -355,15 +454,16 @@ nav{
     margin-bottom: 8rem;
 }
 .projects__page__head h3{
-    font-family: var(--roboto);
     color: var(--voilet);
-    font-size: 3rem;
+    font-size: 3.5rem;
     text-align: center;
+    font-weight: 700;
+    border-bottom: 0.08rem dashed var(--ebony);
 }
 
 .projects__page__head p{
     font-size: 1.5rem;
-    color: var(--black);
+    color: var(--text);
     font-family: var(--monserrate);
     text-align: justify;
 }
@@ -373,19 +473,32 @@ nav{
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 80%;
+    height: 85%;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 .project__box{
     position: relative;
-    background-color: var(--ebony);
-    width: 33rem;
-    height: 75%;
+    background: linear-gradient(50deg,var(--regular-head), var(--ebony), var(--voilet));
+    width: 300px;
+    height: 350px;
     display: flex;
     align-items: center;
-    justify-content: center;  
-   
+    justify-content: center;
+    border-radius: 1rem;    
+}
+.project_card_content{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    overflow: hidden;
+    border-radius: 1rem;   
 }
 .project__box::before{
     content: '';
@@ -436,23 +549,9 @@ nav{
     fill:var(--pro_color);
     stroke: var(--ebony);
 }
-
-.project_card_content{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    overflow: hidden;
-}
 .project__text{
     width: 80%;
     height: 60%;
-    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -460,16 +559,15 @@ nav{
     gap: 1rem;
 }
 .project__text p{
-    font-family: var(--monserrate);
     text-align: center;
     font-size: 1.2rem;
-    font-weight: 100;
-    color: rgb(150, 147, 147);
+    font-weight: 500;
+    color: var(--text);
 }
 .project__text h3{
-    font-family: var(--poppins);
+    color: var(--voilet);
     font-size: 2.5rem;
-    font-weight: bold;
+    font-weight: 700;
 }
 .project__text a{
     text-decoration: none;
@@ -488,21 +586,41 @@ nav{
 #contact__page{
     display: flex;
     width: 100%;
-    flex-direction: column;
     height: 70dvh;
+    justify-content: center;
+    margin-top: 7rem;
 }
-
-.cont__head{
+#contact__page .contact_div_wrapper{
     width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* inset: 2px; */
+    /* border: 1px dotted black; */
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 0 0 30px var(--voilet);
+}
+#contact__page #btn{
+    margin-top: 10rem;
+    padding: 0.75rem 1.4rem;
+    font-size: 1.8rem;
+}
+.cont__head{
+    width: 100%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     align-self: center;
+    align-items: center;
 }
 .cont__head h3{
-    font-family: var(--roboto);
-    font-size: 3rem;
+    width: 100%;
     color: var(--voilet);
+    font-size: 3.5rem;
     text-align: center;
+    font-weight: 700;
+    border-bottom: 0.08rem dashed var(--ebony);
 }
 
 .cont__head p{
@@ -511,7 +629,7 @@ nav{
     text-align: justify;
     line-height: 2.5;
     letter-spacing: 0.5px;
-    color: var(--black);
+    color: var(--text);
 }
 .cont__head a{
     font-family: var(--poppins);
@@ -521,44 +639,27 @@ nav{
     margin-top: 5rem;
 }
 .cont__form{
+    position: absolute;
     display: none;
 }
 
 /* footer */
 #footer__page{
+    margin-top: 6rem;
     width: 100%;
     border-bottom: 0.1rem solid var(--ebony);
 }
 
 .copy__right{
-    font-family: var(--monserrate);
     font-size: 2rem;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    color: var(--ebony);
+    text-align: center;
+    color: var(--voilet);
+    font-weight: 300;
 }
-/*     
-  :root {
-      --head-color: #21262d;
-      --nav-color:#dec6cb;
-      --dark: #0d1117;
-      --pic-bg:#161b22;
-      --list-bg:#21262d;
-      --wave-bg:#161b22;
-      --wave-color:#f5f5f5;
-      --nav-after:#58a6ff;
-      --borders:#30363d;
-      --handles:#30363d;
-      --Roboto: font-family: 'Roboto', sans-serif;
-      --lato: font-family: 'Lato', sans-serif;
-      --OpenSans: font-family: 'Open Sans', sans-serif;
-      --playfair: font-family: 'Playfair Display', serif;
-      --montserrat:'Montserrat', sans-serif;
-      --bitter:'Bitter', serif;
-      --second-color: #dabd34;
-  } */
+#footer__page .copy__right span{
+    font-weight: 600;
+    font-size: 2.5rem;
+}
 
 
   /* --dark: #decba5; */
