--- a/mine.css
+++ b/mine.css
@@ -52,16 +52,17 @@ Light Lavender (#E6E6FA):
     --yelow-white: #F5F5F5;
 }
 body{
-user-select: none;
-font-family : var(--monserrate);
-background: var(--yelow-white) !important;
+    user-select: none;
+    font-family : var(--monserrate);
+    background: var(--yelow-white) !important;
 }
 ::-webkit-scrollbar{
     display: none;
 }
-.container{
+.my-container{
     width: var(--container-width);
     /* padding: 0 !important; */
+    margin: auto;
     position: relative;
 }
 /* navigation-head */
@@ -69,8 +70,9 @@ nav{
     /* width : 80vw; */
     position: sticky;
     top: 0;
-    background-color: var(--yelow-white);
+    background-color: var(--yelow-white) !important;
     z-index: 20;
+  
 }
 .nav__container{
     background:  transparent;
@@ -433,13 +435,17 @@ nav{
     justify-content: center;
     /* background-color: white; */
 }
+.abt__vector img{
+    width: 250px;
+    height: 90%;
+}
 
 
 
 /* Projects showcase */
 #projects__page{
     width: 100%;
-    height: 100dvh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -485,7 +491,8 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 1rem;    
+    border-radius: 1rem;
+    margin: auto;     
 }
 .project_card_content{
     position: relative;
@@ -595,8 +602,6 @@ nav{
     position: relative;
     display: flex;
     flex-direction: column;
-    /* inset: 2px; */
-    /* border: 1px dotted black; */
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: 0 0 30px var(--voilet);
@@ -662,104 +667,228 @@ nav{
 }
 
 
-  /* --dark: #decba5; */
-  /* 
-  @media screen and (max-width: 426px) {
-    .head-nav{
-     display: none;
-      }
-      .menu{
-        display: inline;
-        border: 1px solid;
-        outline: none;
-        background-color: transparent;
-        color: white;
-      }
-      .about{
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 0.2em;
-    }
-    .h1-manager{
-        width: 60%;
-     }
-     .mylist {
-        width: 100%;
-        margin: auto;
-        background: var(--head-color);
-        border: 2px solid var(--borders);
-        position: relative;
-        border-radius: 0.3rem;
-    }
-    .head h1 {
-        padding: 0;
-        color: var(--wave-color);
-        font-size: 18px;
-        font-family: var(--Roboto);
-        text-align: left;
-        border-right: none;
-         text-shadow: 1px 1px 1.3px;
-  
-    }
-    .show-nav{
-        padding: 3px 0px;
-        margin-right: -15px;
-        width: 85%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        list-style-type: none;
-        
-      }
-    
-      .show-nav a{
-        text-decoration: none;
-        color: var(--nav-color);
-        font-size: large;
-        font-family: var(--montserrat);
-        font-weight: 400;
-        padding: 0px 0.5rem 0px 0.5rem;
-        transition: all .4s ease;
-      }
-      .show-nav a:hover{
-        padding: 0px 0.7rem 3px 0.7rem;
-        font-family: var(--playfair);
-        color: var(--nav-after);
-        font-style: italic;
-        border: none;
-        border-top-right-radius: 1rem;
-        border-bottom-left-radius: 1rem;
-        }
-    .hide-backChange, .hide-logo{
-        display: none;
-    }
-    #about-text {
-        width: 90%;
-        text-align: justify;
-        margin: auto;
-        line-height: 1.5rem;
-        font-size: 14px;
-        color: #f5f5f5;
-        font-family: var(--lato);
-        font-weight: 200;
-        text-shadow: 0px 0px 0.5px;
-      }
-    .form{
-        width: 80%;
-    }
-    .n,
-    .mess,
-    .breif {
-        width: 80%;
-    }
-    
-     .footer{
-        display: none;
-     }
 
-  } */
+  
+  @media screen and (max-width: 426px) {
+        .my-container{
+            width: 100dvw;
+            /* margin: auto; */
+        }
+        nav{
+            width: 100%;
+        }
+        .nav__container{
+            width: 100%;
+            display: flex;
+            height: 3.5rem;
+            align-items: flex-end;
+            color: var(--voilet);
+            padding: 0rem 1rem;
+        }
+        .nav__container h2{
+            font-size: 1.5rem;
+            font-weight: 800;
+            align-items: center;
+        }
+        .nav__menu{
+            display: none;
+        }
+        /* .nav__menu li{
+            list-style : none;
+            padding: 0rem 0.4rem;
+            margin-left: 0rem;
+        }
+        .nav__menu a{
+            font-size: 1rem;
+            font-weight: 400;
+            position: relative;
+        } */
+        .bg__change{
+            margin-bottom: 0rem;
+        }
+
+        /* landing page */
+        #landing__page{
+            width: 100%;
+            height: auto;
+            flex-direction: column-reverse;
+            justify-content: space-around;
+        }
+        #landing__page .landing__text{
+            width: 100%;
+            height: 100%;
+            padding: 0rem 1rem;
+        }
+        .landing__image{
+            width: 100%;
+            height: auto;
+            display: flex;
+            /* background: #000; */
+        }
+        .landing__image img{
+            display: flex;
+            width: 25rem;
+            /* height: 100%; */
+           margin: auto;
+        }
+        .text p{
+            font-size: 1.1rem;
+            margin: 1rem auto;
+            font-weight: 500;
+        }
+        .text h3 span:nth-child(1){
+            font-weight: 300;
+            letter-spacing: 0.5px;
+            font-size: 3.5rem;
+        }
+        .text h3 span:nth-child(2){
+            text-transform: capitalize;
+            font-weight: 800;
+            font-size: 4rem;
+        }
+        .landing__text .socials {
+            width: 100%;
+            height: 15%;
+            margin-top: 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            /* background: #0059ff; */
+        }
+        #btn{
+            font-size: 2rem;
+            padding: 0.7rem 1.4rem;
+            letter-spacing: 0rem;
+            background: #444;
+            color: var(--voilet);
+            transition: .5s;
+            border-radius: 0.5rem;
+            font-weight: 500;
+        }
+        .hex{
+            position: relative;
+            margin: auto;
+            width: 30px;
+            height: 50px;
+            border-radius: 4px;
+        }
+     /* about page */
+        #about__page h2{
+            font-size: 2rem;
+            font-weight: 800;
+        }
+        .abt{
+            padding: 0rem 1rem;
+            margin-bottom: 2rem;
+        }
+        .abt h3{
+            font-size: 1.5rem;
+            color: var(--regular-head);
+            text-align: center;
+            font-weight: 700;
+        }
+        .abt p{
+            font-size: 1rem;
+            font-weight: 500;
+            text-align: left;
+        }
+        .second__abt p, .second__abt h3, .fourth__abt p, .fourth__abt h3{
+            text-align: right;
+        }
+        .abt__vector{
+            width: 200px;
+            display: flex;
+        }
+        .abt__vector img{
+            width: 100%;
+        }
+        .abt__content{
+            width: 55%;
+        }
+        /* projects css */
+        #projects__page{
+            width: 100%;
+            margin-top: 6rem;
+        }
+        .projects__page__head{
+            width: 100%;
+            align-self: center;
+            margin-bottom: 7rem;
+            padding: 0rem 1rem;
+        }
+        .projects__page__head h3{
+            font-size: 2.5rem;
+            text-align: center;
+            font-weight: 700;
+            border-bottom: 0.08rem dashed var(--ebony);
+        }
+        
+        .projects__page__head p{
+            font-size: 1rem;
+            text-align: justify;
+        }
+        .projects__show{
+            gap: 1.3rem;
+            width: 100%;
+            height: 85%;
+
+        }
+        .project__box{
+            position: relative;
+            width: 280x;
+            height: 280px;
+            margin: auto;    
+        }
+        .project__box::after, .project__box::before{
+            display: none;
+        }
+        .project__text p{
+            text-align: center;
+            font-size: 1rem;
+            font-weight: 500;
+            color: var(--text);
+        }
+        .project__text h3{
+            font-size: 2.2rem;
+            font-weight: 700;
+        }
+        /* contact page */
+        #contact__page{
+            display: flex;
+            width: 100%;
+            height: auto;
+            justify-content: center;
+            margin-top: 7rem;
+            padding: 0rem 1rem;
+        }
+        #contact__page .contact_div_wrapper{
+            width: 320px;
+            height: 350px;
+            padding: 1rem;
+            box-shadow: 0 0 25px var(--voilet);
+        }
+        .cont__head h3{
+            width: 100%;
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+        
+        .cont__head p{
+            font-size: 1rem;
+            text-align: justify;
+            line-height: 2;
+            letter-spacing: 0.5px;
+            font-weight: 500;
+        }
+
+        /* footer */
+        .copy__right{
+            font-size: 1.1rem;
+            font-weight: 400;
+        }
+        #footer__page .copy__right span{
+            font-weight: 600;
+            font-size: 1.1rem;
+        }
+        
+  }
